# laidlaw

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/app/: cards.py  data_loader.py  decision.py  engine.py  explain.py  main.py  models.py  workshop.py
backend/tests/: test_api.py  test_engine.py  test_engine_edges.py
data/: assumptions.json  sdg_mapping.json  sites.json  technologies.json
frontend/: index.html  workshop.html
