[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laidlaw"
version = "0.4.0"
description = "Industrial Decarbonisation Pathway Comparator — CCS vs. electrification decision-support."
license = { text = "MIT" }
authors = [{ name = "Defne Nihal Ertugrul" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.ruff]
line-length    = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E741", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"app/main.py" = ["E501"]
"app/explain.py" = ["E501"]
"app/cards.py" = ["E501"]

[tool.mypy]
python_version         = "3.11"
ignore_missing_imports = true
files                  = ["app"]
# Strict mode is the v0.5 goal; the engine kernel and models are already
# fully annotated. The FastAPI surface (main.py) leans on framework dynamism
# and is a deliberate exclusion until v0.5.
disallow_untyped_defs  = true
warn_redundant_casts   = true
warn_unused_ignores    = true

[[tool.mypy.overrides]]
module = ["app.main", "app.cards", "app.explain"]
disallow_untyped_defs = false
